--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,9 +2,12 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
-COPY ./requirements.txt .
+# Explicitly expose port (matches what your app uses)
+EXPOSE $PORT
+
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-CMD ["python", "app/main.py"]
+CMD ["python", "main.py"]
